--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 
 
 
-<link rel="stylesheet" type="text/css" href="../css/master.css" />
+<link rel="stylesheet" type="text/css" href="css/master.css" />
 
 
 </head>
@@ -35,16 +35,17 @@
                         </div>
                     </div>
                     <div class="row">
+                        <p class="text-warning text-center"><%=message%></p>
+                    </div>
+                    <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-form-item name">
-                            <input type="text" name="username" id="name" data-validation="required" placeholder="Username" />
-                            <div class="help help-sm help-red">!</div>
+                            <input type="text" name="username" id="name" required placeholder="Username" />
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-form-item pass">
-                            <input type="text" name="password" id="name" data-validation="required" placeholder="Password" />
-                            <div class="help help-sm help-red">!</div>
+                            <input type="text" name="password" id="name" required placeholder="Password" />
                         </div>
                     </div>
                     <div class="row latest-row">
@@ -98,16 +99,16 @@
 <!-- =========================
     END FOOTER
 ============================== -->
-<link rel="stylesheet" type="text/css" href="../css/responsive.css" />
+<link rel="stylesheet" type="text/css" href="css/responsive.css" />
     
 <!-- =========================
      SCRIPTS   
 ============================== -->	
 <!-- JQUERY -->
-<script src="../js/jquery-2.2.0.min.js"></script>
+<script src="js/jquery-2.2.0.min.js"></script>
 
 <!-- BOOTSTRAP -->
-<script src="../js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 </body>
 
