--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
 
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-form-item pass">
-                            <input type="text" name="password" id="name" required placeholder="Password" />
+                            <input type="password" name="password" id="name" required placeholder="Password" />
                         </div>
                     </div>
                     <div class="row latest-row">
