Modifying Portal.ejs

--- a/views/portal.ejs
+++ b/views/portal.ejs
@@ -139,7 +139,7 @@
                                 </tr>
                             </thead>
                             <tbody id="students">                               
-                                 <% if(data.length){                                 
+                                 <% if(data != null){                                 
                                      for(var i = 0;i < data.length;i++) { %>                 
                                     <tr>
                                         <td><%=data[i].verification_code%></td>
